tests/fixtures/invalid/multidimensional_array_parameter.c
int sum(int matrix[2][3]) {
  return 0;
}
int main(void) {
  int values[2] = {1, 2};
  return sum(values);
}
